package com.softinter.sicapi.entity.pm;

import com.softinter.sicapi.entity.base.BaseBusinessEntity;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import lombok.Data;
import lombok.EqualsAndHashCode;

import java.util.UUID;

@Entity
@Table(name = "pm_test_scenario")
@Data
@EqualsAndHashCode(callSuper = true)
public class PmTestScenario extends BaseBusinessEntity {

    @Column(name = "project_id")
    private UUID projectId;

    @Column(name = "test_plan_id")
    private UUID testPlanId;

    @Column(name = "task_id")
    private UUID taskId;

    @Column(name = "scenario_code", length = 50)
    private String scenarioCode;

    @Column(name = "scenario_name", nullable = false, length = 255)
    private String scenarioName;

    @Column(name = "priority", length = 20)
    private String priority = "Medium";

    @Column(name = "status", length = 20)
    private String status = "Active";

    @Column(name = "test_type", length = 20)
    private String testType = "SIT";

    @Column(name = "description", columnDefinition = "TEXT")
    private String description;

    // ===== Relationships =====
    @jakarta.persistence.ManyToOne(fetch = jakarta.persistence.FetchType.LAZY)
    @jakarta.persistence.JoinColumn(name = "task_id", insertable = false, updatable = false)
    private PmTask task;
}